# WORLD13

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  railway.toml  run.sh
api/: api_voynich.py  app.py  routes.py
config/: bridge.yaml  departments.yaml  identity.json  watchers.yaml
dashboard/: package.json
docs/: 82264425.md  ARCHITECTURE.md  CHANNELS.md  CONSOLE_FAQ.md  DEPLOY.md  MCP.md  PACKS.md  SESSIONS.md  (+27 more)
engine/: .dockerignore  README.md  abuse_shield.py  agent.py  ai_guardrails.py  alerts.py  ambassador.py  ambassador_service.py  api_abuse.py  api_ambassador.py  api_architect.py  api_battle.py  api_briefing.py  api_channels.py  api_contact_inquiry.py  api_contacts.py  api_deliverables.py  api_delivery.py  api_departments.py  api_deploy.py  api_desk_query.py  api_desk_vault.py  api_engine.py  api_feed.py  api_feedback.py  api_form.py  api_gate.py  api_identity.py  api_inbound.py  api_inbox.py  api_invites.py  api_loop.py  api_manifest.py  api_pack.py  api_pack_install.py  api_pipeline.py  api_playstop.py  api_policy.py  api_profile.py  api_pulse.py  (+102 more)
engine/channels/: __init__.py  base.py  email_adapter.py  formatter.py  manager.py  sms.py  voice.py  web.py  whatsapp.py
engine/competence_calibration/: __init__.py  dynamics.py
engine/shadow/: archetypes.py  context.py  dynamics.py  protocols.py  resolution.py
engine/tool_providers/: calendly.py  hubspot.py  internal.py  platform.py  slack_provider.py  stripe_provider.py
engine/voynich/: __init__.py  alphabet.py  encoder.py  renderer.py
(+218 files in other folders)
