[project]
name = "13tmos-engine"
version = "1.0.0"
description = "13TMOS Engine — Distilled Protocol Kernel"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Robert C. Ventura", email = "dev@tmos13.ai"}]
dependencies = [
    "anthropic>=0.40.0,<1.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sse-starlette>=1.6.0,<2.0",
    "watchdog>=4.0,<7.0",
    "bcrypt>=4.0,<6.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "twilio>=9.0,<10.0",
    "pynacl>=1.5,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
